# wearon-worker

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  dbTypes.ts  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.claude/commands/: project-context.md
.codex/prompts/: project-context.md
.gemini/commands/: project-context.toml
.github/workflows/: ci-cd.yml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
config/: logging_config.py  settings.py
docs/: 1-4-python-worker-generation-pipeline.md  api-contracts.md  architecture.md  data-models.md  deployment-guide.md  development-guide.md  edge-case-error-handling-report-2026-02-15.md  index.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
docs/bmad/: project-context.md
models/: __init__.py  generation.py  size_rec.py  task_payload.py
monitoring/alloy/: config.alloy
monitoring/grafana/: grafana.ini
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus.yml
nginx/: nginx.conf
scripts/: first-deploy.sh  init-ssl.sh  renew-certs.sh
services/: __init__.py  image_processor.py  openai_client.py  redis_client.py  supabase_client.py
size_rec/: app.py  image_processing.py  mediapipe_service.py  size_calculator.py
tests/: test_consumer.py  test_mediapipe_service.py  test_size_calculator.py  test_size_rec_app.py  test_task_payload.py  test_tasks.py
worker/: celery_app.py  consumer.py  startup.py  tasks.py
(+32 files in other folders)
